fixed image sizes again on mobile and full view of connect page

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -34,17 +34,14 @@ footer.page-footer {
     visibility: hidden;
   }
 
-<<<<<<< HEAD
   .card {
     width: auto;
-    height: 275px;
+    height: 150px;
   }
 
-=======
->>>>>>> acf4d1b (mobile view on nav complete)
   .match-profile-picture {
-    width: 50px;
-    height: 30px;
+    max-width: 100px;
+    max-height: 75px;
     float: left;
     margin: 0 10px 0 0;
   }
